# libhy_protocol

./: .gitignore  README.md  build.sh  configure.ac
build-script/pc/pc-chip/: config.sh
doc/: protocol.md
example/: Makefile.am  client_node.c  client_node.h  hy_protocol_client_demo.c  hy_protocol_server_demo.c
example/client/: Makefile.am  hy_protocol_client_demo.c
example/server/: Makefile.am  hy_protocol_server_demo.c
include/: Makefile.am  hy_protocol.h  hy_protocol_client.h  hy_protocol_server.h  protocol.h
include/socket/: Makefile.am  protocol_client_struct.h  protocol_server_struct.h  socket_client.h
m4/: check_libhy_utils.m4  select_socket_type.m4
src/: Makefile.am  hy_protocol.c  protocol.c
src/libevent/: Makefile.am  hy_protocol_client.c  hy_protocol_server.c
src/socket/: Makefile.am  hy_protocol_client_struct.c  hy_protocol_server_struct.c  protocol_client_struct.c  protocol_server_struct.c  protocol_struct_client.c  socket_client.c
test/: Makefile.am
